WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186450
AX: [iOS] accessibility sometimes doesn't know process suspension is canceled
https://bugs.webkit.org/show_bug.cgi?id=186450
Summary
AX: [iOS] accessibility sometimes doesn't know process suspension is canceled
Nan Wang
Reported
2018-06-08 16:59:47 PDT
WebProcess::cancelPrepareToSuspend() sometimes returns early without letting accessibility know. <
rdar://problem/40745030
>
Attachments
patch
(2.05 KB, patch)
2018-06-08 17:12 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2018-06-08 17:12:11 PDT
Created
attachment 342347
[details]
patch
WebKit Commit Bot
Comment 2
2018-06-11 11:11:28 PDT
Comment on
attachment 342347
[details]
patch Clearing flags on attachment: 342347 Committed
r232722
: <
https://trac.webkit.org/changeset/232722
>
WebKit Commit Bot
Comment 3
2018-06-11 11:11:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug