AX: [iOS] accessibility sometimes doesn't know process suspension is canceled https://bugs.webkit.org/show_bug.cgi?id=186450

Reviewed by Chris Fleizach.

There's some early return condition in WebProcess::cancelPrepareToSuspend() which
could lead to accessibility failing to post process status notificaiton. Fixed it
by moving the accessibility notification before the early return condition.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::cancelPrepareToSuspend):


Canonical link: https://commits.webkit.org/201854@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232722 268f45cc-cd09-0410-ab3c-d52691b4dbfc